--- a/EkoClient/package.json
+++ b/EkoClient/package.json
@@ -38,6 +38,7 @@
     "@types/node": "~8.9.4",
     "@types/xml2js": "^0.4.5",
     "codelyzer": "^5.0.0",
+    "ember-cli-cors": "^0.0.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
