--- a/EkoSpringServer/pom.xml
+++ b/EkoSpringServer/pom.xml
@@ -73,6 +73,11 @@
 			<version>2.3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>4.0.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
