--- a/EkoClient/package.json
+++ b/EkoClient/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0",
     "@angular/animations": "~8.2.7",
     "@angular/common": "~8.2.7",
     "@angular/compiler": "~8.2.7",
@@ -19,6 +20,7 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "agm-direction": "^0.7.9",
     "crypto-js": "^3.1.9-1",
     "ngx-cookie-service": "^2.2.0",
     "ngx-soap": "^0.6.0",
